# zproto

./: .README.md.kate-swp  .gitignore  .travis.yml  AUTHORS  Dockerfile  Jenkinsfile  Makefile.am  README.md  README.txt  autogen.sh  configure.ac
.github/workflows/: CI.yaml
.obs/: workflows.yml
doc/: Makefile.am  asciidoc.conf  mkman  xrap.txt  xrap_msg.txt  zproto.txt  zproto_example.txt
include/: zcodec.h  zproto.h  zproto_example.h
include/zproto/example/: binary_test.go  structures.go  types.go
model/: Makefile.am  codec_c.gsl  generate  library.gsl  zcodec_example.xml  zproto_bnf.gsl  zproto_c.gsl  zproto_example.bnf  zproto_example.xml
packaging/debian/: changelog  control  copyright  rules  zproto-examples.install  zproto.docs  zproto.dsc  zproto.dsc.obs  zproto.install
packaging/docker/: run_zproto.sh
packaging/nuget/: NetMQ.zproto.nuspec
packaging/obs/: _service
packaging/redhat/: zproto.spec
scripts/: create_project.sh
skeleton/: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
skeleton/doc/: Makefile.am  asciidoc.conf  mkman  myproj.txt  myproj_msg.txt
skeleton/include/: myproj.h  myproj_msg.h
skeleton/model/: Makefile.am  generate  myproj_msg.xml
skeleton/src/: Makefile.am  libmyproj.pc.in  myproj_msg.c  myproj_msg.xml  myproj_selftest.c  selftest
src/: Makefile.am  libxrap.pc.in  project.clj  selftest  zcodec_selftest.c  zproto_bnf.gsl  zproto_c.gsl  zproto_client_c.gsl  zproto_codec_c.gsl  zproto_codec_c_v1.gsl  zproto_codec_clite.gsl  zproto_codec_clj.gsl  zproto_codec_cs.gsl  zproto_codec_fs.gsl  zproto_codec_go.gsl  zproto_codec_java.gsl  zproto_codec_php.gsl  zproto_codec_python.gsl  zproto_dot.gsl  zproto_example.bnf  zproto_example.c  zproto_example.xml  zproto_example_cs.xml  zproto_example_fs.xml  zproto_example_go.xml  zproto_example_goczmq.xml  zproto_example_java.xml  zproto_example_php.xml  zproto_lib.gsl  zproto_lib_clj.gsl  zproto_lib_cs.gsl  zproto_lib_fs.gsl  zproto_lib_go.gsl  zproto_lib_java.gsl  zproto_lib_php.gsl  zproto_selftest.c  zproto_server_c.gsl  zproto_server_clj.gsl  zproto_server_go.gsl
src/clojure/src/org/zproto/: zproto_example.clj
src/clojure/test/org/zproto/: zproto_example_test.clj
src/csharp/ZProto/: Example.cs
src/csharp/ZProto.Tests/: ExampleTests.cs
src/fsharp/ZProto/: Example.fs
src/fsharp/ZProto.Tests/: Example.Tests.fs  ExampleTests.fs
src/go/goczmq/zproto/example/: binary.go  binary_test.go  example.go  log.go  log_test.go  structures.go  structures_test.go  types.go  types_test.go
src/go/zmq4/zproto/example/: binary.go  binary_test.go  example.go  log.go  log_test.go  structures_test.go  types_test.go
src/go/zproto/example/: binary.go  binary_test.go  example.go  log.go  log_test.go  repeat.go  repeat_test.go  structures.go  structures_test.go  types.go  types_test.go
src/goczmq/zproto/example/: binary.go  binary_test.go  example.go  log.go  log_test.go  structures.go  structures_test.go  types.go  types_test.go
src/main/clojure/src/org/zproto/: zproto_example.clj
src/main/java/org/zproto/: TestZprotoExample.java  ZprotoExample.java
src/php/: Example.php  composer.json  phpunit.xml
src/php/Example/: Binary.php  Log.php  Structures.php  Types.php
src/php/tests/Example/: BinaryTest.php  LogTest.php  StructuresTest.php  TypesTest.php
src/python/zproto/: ZprotoExample.py
src/test/java/org/zproto/: TestZprotoExample.java
src/test/python/zproto/: test_ZprotoExample.py
src/zyre_peer_example/: project.xml
src/zyre_peer_example/src/: example_peer.c  example_peer.xml  example_peer_msg.xml  test_peerd.c  zproto_peer_c.gsl
